--- a/Groups and members.ipynb
+++ b/Groups and members.ipynb
@@ -28,7 +28,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,7 +52,7 @@
         "import pandas as pd\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "source": [
         "posts = json.load(codecs.open('/content/drive/My Drive/Angl/Posts.json', 'r', 'utf-8-sig'))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "source": [
         "len(posts)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
         "                             'OwnerType',\n",
         "                             ])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "    \n",
         "    data = data.append(info, ignore_index=True)    "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
         "# save\n",
         "data.to_csv('/content/drive/My Drive/Angl/posts_info.csv')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
       "source": [
         "data.tail()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
       "source": [
         "words = data['SearchQuery'].unique()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
       "source": [
         "len(words)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
       "source": [
         "words"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +516,7 @@
       "source": [
         "owners = data['OwnerID'].unique()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
       "source": [
         "len(owners)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -569,7 +569,7 @@
         "    continue\n",
         "len(groups)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
       "source": [
         "!pip install vk_api"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,12 +633,12 @@
       },
       "source": [
         "import vk_api\n",
-        "vk_session = vk_api.VkApi('ag15bar', '[Amatory2007]')\n",
+        "vk_session = vk_api.VkApi(login, password)\n",
         "vk_session.auth()\n",
         "\n",
         "vk = vk_session.get_api()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -670,7 +670,7 @@
         "  except Exception:\n",
         "    pass"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +688,7 @@
         "  for row in rows:\n",
         "    writer.writerow(row)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +706,7 @@
         "together = pd.read_csv('Группы и пользователи.csv')\n",
         "together.head()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
